--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
             href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css"
             rel="stylesheet"
         />
-        <title>Jeruk Nipis vs Nangka</title>
+        <title>Pepaya vs Nangka</title>
     </head>
     <body>
         <section
@@ -32,7 +32,7 @@
                 "
             >
                 <h1 class="text-3xl text-bold">AI Klasifikasi Daun</h1>
-                <h1 class="text-3xl text-bold">Jeruk Nipis vs Nangka</h1>
+                <h1 class="text-3xl text-bold">Pepaya vs Nangka</h1>
 
                 {% if uploaded_image %}
                 <img
@@ -53,7 +53,7 @@
                     "
                 >
                     <p class="text-center">
-                        Masukkan gambar daun Jeruk Nipis atau daun Nangka (background putih)
+                        Masukkan gambar daun Pepaya atau daun Nangka (background putih)
                     </p>
                 </div>
                 {% endif %} {% if prediction %}
@@ -86,17 +86,7 @@
             </main>
         </section>
         <footer class="flex gap-x-8 justify-center items-center h-32 bg-white">
-            <img
-                class="h-16"
-                src="https://digitalent.kominfo.go.id/assets/@images/logo.png"
-                alt="logo-dts"
-            />
-            <img
-                class="h-16"
-                src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a2/Logo_of_Ministry_of_Communication_and_Information_Technology_of_the_Republic_of_Indonesia.svg/1200px-Logo_of_Ministry_of_Communication_and_Information_Technology_of_the_Republic_of_Indonesia.svg.png"
-                alt=""
-            />
-            <p>by Wahyu</p>
+         
         </footer>
     </body>
 </html>
